dark mode resolved

--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
